...
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/amountEditText"
            android:text="0.00"
            android:textSize="14sp"
            android:inputType="number"
            android:digits="0123456789.,"
            android:maxLength="8"
            android:background="@drawable/bg_edit_text"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/payButton"
            android:text="@string/button_pay"
            android:background="@drawable/bg_button"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
...
